--- a/index.html
+++ b/index.html
@@ -1,12 +1,331 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+<meta http-equiv="Content-Language" content="ja">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Benjamin Jädon Chöe @ Particle Theory Group im Universität Tsukuba</title>
+<style>a {text-decoration:none}</style>
+<link type="text/css" rel="stylesheet" href="demian.css">
 </head>
-<body>
-  <p>Hello, World!</p>
+
+<body topmargin="0" leftmargin="3" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+
+<div align="center">
+	<table border="0" width="1000" id="table1" cellspacing="0" cellpadding="0">
+		<tr>
+			<td height="150"><div align="center"><img border="0" name="die Homepage von Benjamin Jädon Chöe :: Particle Theory Group im Universität Tsukuba" src="images/benjamin_title.png" title="die Homepage von Benjamin Jädon Chöe :: Particle Theory Group im Universität Tsukuba" width="1000" height="150"></div></td>
+		</tr>
+		<tr>
+			<td height="25"><div align="right">Dies ist die Homepage von Benjamin Jädon Chöe@Universität Tsukuba</div></td>
+		</tr>
+		<tr>
+			<td height="700" valign="top">
+			<table border="0" width="1000" id="table3" height="200" cellspacing="0" cellpadding="0">
+				<tr>
+					<td width="1000" height="25"></td>
+				</tr>
+				<tr>
+					<td width="1000">
+					<table border="2" width="1000" id="profile" cellspacing="0" cellpadding="10" height="100%" bordercolor="#444444">
+						<tr>
+							<td>
+							<table border="0" width="100%" id="profile" cellspaceing="0" cellpadding="0">
+							<tr>
+							<td>
+							<span class="orangeText">Benjamin Jädon Chöe [In Japanese Kanji: 崔 在敦]</span>
+							<br><br>
+							<span class="grayText">Particle Theory Group<br>Graduate School of Pure and Applied Physics, University of Tsukuba</span>
+							<br><br>
+							<span class="orange">Gemischter Chor der Universität Tsukuba</span>
+							<br><br>
+							〒305-8571 茨城県つくば市天王台1-1-1<br>筑波大学物理学系素粒子理論研究室
+							<br><br>
+							<span class="grayText">自然系学系D棟307号室</span>
+							<br><br>
+							Tel: <span class="orangeText">+81-29-853-6931</span>
+							<br>
+							E-Mail: <span class="orangeText">donchoi</span>アットマーク<span class="orangeText">het.ph.tsukuba.ac.jp</span>
+							<br>
+							Blog: <a target="_blank" href="http://posteinstein.com">http://PostEinstein.com</a></td>
+							<td width="525"> 
+							<div align="right"><img height="300" name="Benjamin Cantabile" src="images/PortraitBen.jpg" title="Benjamin Cantabile" width="252.2"></div>
+							</td>
+							</tr>
+							</table>
+							</td>
+						</tr>
+					</table>
+					</td>
+				</tr>
+			</table>
+			<table border="0" width="1000" id="table2" height="300" cellspacing="0" cellpadding="0">
+				<tr>
+				<td height="25"></td><td height="25"></td><td height="25"></td>
+				</tr>
+				<tr>
+					<td width="400" height="25">
+					<table border="0" width="100%" id="table3" cellspacing="0" cellpadding="5">
+						<tr>
+							<td><span class="orangeText">Twitterによる物理学の最新情報</span></td>
+						</tr>
+					</table>
+					</td>
+					<td width="25" height="25"></td>
+					<td width="575" height="25">
+					<table border="0" width="100%" id="table4" cellspacing="0" cellpadding="5">
+						<tr>
+							<td><span class="orangeText">私のつぶやき</span></td>
+						</tr>
+					</table>
+					</td>
+				</tr>
+				<tr>
+					<td width="400" height="262">
+					<table border="2" height="262" width="400" id="table5" cellspacing="0" cellpadding="0" bordercolor="#444444" style="line-height: 150%">
+						<tr>
+							<td><script src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'list',
+  rpp: 30,
+  interval: 6000,
+  title: '@BenjaminJChoi',
+  subject: 'Physics Tweets',
+  width: 392,
+  height: 300,
+  theme: {
+    shell: {
+      background: '#ffffff',
+      color: '#444444'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#444444',
+      links: '#eb9500'
+    }
+  },
+  features: {
+    scrollbar: true,
+    loop: false,
+    live: true,
+    hashtags: true,
+    timestamp: true,
+    avatars: true,
+    behavior: 'all'
+  }
+}).render().setList('BenjaminJChoi', 'physics').start();
+</script><!--<IFRAME WIDTH="100%" HEIGHT="100%" FRAMEBORDER="no" SCROLLING="auto" style="overflow-x:hidden" SRC="01.html" MARGINWIDTH="0" MARGINHEIGHT="0" NAME="bbs" HSPACE="0" VSPACE="0" border="0"></IFRAME>-->
+							</td>
+						</tr>
+					</table>
+					</td>
+					<td width="25" height="262"></td>
+					<td width="575" height="262">
+					<table border="2" height="262" width="575" id="table6" cellspacing="0" cellpadding="0" bordercolor="#EB9500" style="line-height: 150%">
+						<tr>
+							<td><script src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'profile',
+  rpp: 30,
+  interval: 6000,
+  width: 567,
+  height: 300,
+  theme: {
+    shell: {
+      background: '#ffffff',
+      color: '#444444'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#000000',
+      links: '#eb9500'
+    }
+  },
+  features: {
+    scrollbar: true,
+    loop: false,
+    live: true,
+    hashtags: true,
+    timestamp: true,
+    avatars: false,
+    behavior: 'all'
+  }
+}).render().setUser('BenjaminJChoi').start();
+</script><!--<IFRAME WIDTH="100%" HEIGHT="100%" FRAMEBORDER="no" SCROLLING="auto" style="overflow-x:hidden" SRC="02.html" MARGINWIDTH="0" MARGINHEIGHT="0" NAME="bbs" HSPACE="0" VSPACE="0" border="0"></IFRAME>-->
+							</td>
+						</tr>
+					</table>
+					</td>
+				</tr>
+			</table>
+			<table border="0" width="1000" id="table7" height="250" cellspacing="0" cellpadding="0">
+				<tr>
+					<td width="550" height="25"></td>
+					<td width="25" height="25"></td>
+					<td width="425" height="25"></td>
+				</tr>
+				<tr>
+					<td width="550" height="25">
+					<table border="0" width="100%" id="table8" cellspacing="0" cellpadding="5">
+						<tr>
+							<td><span class="orangeText">Verified Twitter Users</span></td>
+						</tr>
+					</table>
+					</td>
+					<td width="25" height="25"></td>
+					<td width="425" height="25">
+					<table border="0" width="100%" id="table9" cellspacing="0" cellpadding="5">
+						<tr>
+							<td><span class="orangeText">PostEinstein.comによるRSS Feed & 資料倉庫</span></td>
+						</tr>
+					</table>
+					</td>
+				</tr>
+				<tr>
+					<td width="550" height="250">
+					<table border="2" width="100%" id="table10" cellspacing="0" cellpadding="0" bordercolor="#444444" height="100%">
+						<tr>
+							<td><script src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'list',
+  rpp: 20,
+  interval: 6000,
+  title: '@BenjaminJChoi',
+  subject: 'Verified Twitterians',
+  width: 541,
+  height: 300,
+  theme: {
+    shell: {
+      background: '#ffffff',
+      color: '#444444'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#444444',
+      links: '#eb9500'
+    }
+  },
+  features: {
+    scrollbar: true,
+    loop: false,
+    live: true,
+    hashtags: true,
+    timestamp: true,
+    avatars: true,
+    behavior: 'all'
+  }
+}).render().setList('BenjaminJChoi', 'verified').start();
+</script><!--<IFRAME WIDTH="100%" HEIGHT="100%" FRAMEBORDER="no" SCROLLING="auto" SRC="03.html" MARGINWIDTH="0" MARGINHEIGHT="0" NAME="bbs" HSPACE="0" VSPACE="0" border="0"></IFRAME>-->
+							</td>
+						</tr>
+					</table>
+					</td>
+					<td width="25" height="399"></td>
+					<td width="425" height="399">
+					<table border="2" width="100%" id="table11" cellspacing="0" cellpadding="0" height="100%" bordercolor="#444444">
+						<tr>
+							<td><IFRAME WIDTH="100%" HEIGHT="100%" FRAMEBORDER="no" SCROLLING="auto" SRC="rss.html" MARGINWIDTH="0" MARGINHEIGHT="0" NAME="bbs" HSPACE="0" VSPACE="0" border="0"></IFRAME>
+							</td>
+						</tr>
+					</table>
+					</td>
+				</tr>
+			</table>
+			<table border="0" width="100%" id="table12" cellspacing="0" cellpadding="0">
+				<tr>
+					<td height="25"></td>
+				</tr>
+				<tr>
+					<td height="25">
+					<table border="0" width="100%" id="table13" cellspacing="0" cellpadding="5">
+						<tr>
+							<td><span class="orangeText">Bookmarks</span></td>
+						</tr>
+					</table>
+					</td>
+				</tr>
+				<tr>
+					<td>
+			<table border="0" width="1000" id="table14" height="175" cellspacing="0" cellpadding="0" style="line-height: 150%">
+				<tr>
+					<td width="319" height="175">
+					<table border="2" width="100%" id="bookmark1" cellspacing="0" cellpadding="10" height="100%" bordercolor="#444444">
+						<tr>
+							<td>
+							<li><a target="_blank" title="筑波大学" href="http://www.tsukuba.ac.jp/">筑波大学</a></li> 
+							<li><a target="_blank" title="筑波大学物理学系" href="http://www.ph.tsukuba.ac.jp/index-j.html">筑波大学物理学系</a></li>
+							<li><a target="_blank" title="筑波大学物理学系素粒子理論研究室" href="http://www-het.ph.tsukuba.ac.jp/"><span class="orangeText">筑波大学物理学系素粒子理論研究室</span></a></li>
+							<li><a target="_blank" title="筑波大学計算科学研究センター" href="http://www.ccs.tsukuba.ac.jp/CCS/index-j.html">筑波大学計算科学研究センター</a></li>
+							<li><a target="_blank" title="筑波大学混声合唱団" href="http://www.stb.tsukuba.ac.jp/~konsei/blog"><span class="orangeText">筑波大学混声合唱団</span></a></li>
+							<li><a target="_blank" title="筑波大学数理物質科学研究科" href="http://www.pas.tsukuba.ac.jp/">筑波大学数理物質科学研究科</a></li>
+							<li><a target="_blank" title="筑波大学付属図書館 Electronic Journals" href="http://www.tulips.tsukuba.ac.jp/online-j/">筑波大学付属図書館 Electronic Journals</a></li>
+							</td>
+						</tr>
+					</table>
+					</td>
+					<td width="25" height="175"></td>
+					<td width="318" height="175">
+					<table border="2" width="100%" id="bookmark2" cellspacing="0" cellpadding="10" height="100%" bordercolor="#444444">
+						<tr>
+							<td>
+							<li><a target="_blank" title="物理のかぎプロジェクトWiki" href="http://hooktail.org/wiki/index.php?Werthcliff">物理のかぎプロジェクトWiki</a></li>
+							<li><a target="_blank" title="物理のかぎしっぽ" href="http://hooktail.sub.jp/">物理のかぎしっぽ</a></li>
+							<li><a target="_blank" title="PostEinstein.com" href="http://posteinstein.com"><span class="orangeText">PostEinstein.com</span></a></li>
+							<li><a target="_blank" title="Rapid Eye Movement" href="http://www.geocities.jp/exquisite_rabbit/">Rapid Eye Movement</a></li>
+							<li><a target="_blank" title="京都大学基礎物理学研究所" href="http://www.yukawa.kyoto-u.ac.jp/"><span class="orangeText">京都大学基礎物理学研究所</span></a></li>
+							<li><a target="_blank" title="高エネルギー加速器研究機構" href="http://www.kek.jp/ja/index.html">高エネルギー加速器研究機構</a></li>
+							<li><a target="_blank" title="プレプリントサーバー" href="http://xxx.yukawa.kyoto-u.ac.jp/">プレプリントサーバー</a></li>
+							</td>
+						</tr>
+					</table>
+					</td>
+					<td width="25" height="175"></td>
+					<td width="319" height="175">
+					<table border="2" width="100%" id="bookmark3" cellspacing="0" cellpadding="10" height="100%" bordercolor="#EB9500">
+						<tr>
+							<td>
+							 
+							<li><a target="_blank" title="青木 慎也" href="http://www-het.ph.tsukuba.ac.jp/~saoki/">青木慎也先生</a></li>
+							<li><a target="_blank" title="石橋 延幸" href="http://www-het.ph.tsukuba.ac.jp/~ishibash/">石橋延幸先生</a></li>
+							<li><a target="_blank" title="金谷 和至" href="http://www.ccs.tsukuba.ac.jp/people/kanaya/">金谷和至先生</a></li>
+							<li><a target="_blank" title="石塚 成人" href="http://www-het.ph.tsukuba.ac.jp/~ishizuka/">石塚成人先生</a></li>
+							<li><a target="_blank" title="吉江 友照" href="http://www.ccs.tsukuba.ac.jp/people/yoshie/">吉江友照先生</a></li>
+							<li><a target="_blank" title="佐藤 勇二" href="http://www-het.ph.tsukuba.ac.jp/~ysatoh/index.html">佐藤勇二先生</a></li>
+							<li><a target="_blank" title="谷口 裕介" href="http://www-het.ph.tsukuba.ac.jp/~tanigchi/">谷口裕介先生</a></li>
+							</td>
+						</tr>
+					</table>
+					</td>
+				</tr>
+				</table>
+					</td>
+				</tr>
+			</table>
+			</td>
+		</tr>
+		<tr>
+		<td height="25"></td>
+		</tr>
+		<tr>
+			<td height="25">
+			<div align="right">Copyright 2012 Benjamin Jädon Chöe All rights reserved // Last modified: Mon Mar 05 00:51:09 JST 2012 //</div>
+			</td>
+		</tr>
+	</table>
+</div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-13040817-2");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
