--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="ja">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Benjamin Jädon Chöe @ Particle Theory Group im Universität Tsukuba</title>
+<title>Benjamin Jaedon Choi @ Lattice Gauge Theory Research Center of Seoul National University</title>
 <style>a {text-decoration:none}</style>
 <link type="text/css" rel="stylesheet" href="demian.css">
 </head>
@@ -13,10 +13,10 @@
 <div align="center">
 	<table border="0" width="1000" id="table1" cellspacing="0" cellpadding="0">
 		<tr>
-			<td height="150"><div align="center"><img border="0" name="die Homepage von Benjamin Jädon Chöe :: Particle Theory Group im Universität Tsukuba" src="images/benjamin_title.png" title="die Homepage von Benjamin Jädon Chöe :: Particle Theory Group im Universität Tsukuba" width="1000" height="150"></div></td>
+			<td height="150"><div align="center"><img border="0" name="The webpage of Benjamin Jädon Chöe :: Lattice Gauge Theory Research Center of Seoul National University" src="images/benjamin_title.png" title="The webpage of Benjamin Jädon Chöe :: Lattice Gauge Theory Research Center of Seoul National University" width="1000" height="150"></div></td>
 		</tr>
 		<tr>
-			<td height="25"><div align="right">Dies ist die Homepage von Benjamin Jädon Chöe@Universität Tsukuba</div></td>
+			<td height="25"><div align="right">Dies ist die Homepage von Benjamin Jaedon Choi@SNU-LGTRC</div></td>
 		</tr>
 		<tr>
 			<td height="700" valign="top">
@@ -32,23 +32,23 @@
 							<table border="0" width="100%" id="profile" cellspaceing="0" cellpadding="0">
 							<tr>
 							<td>
-							<span class="orangeText">Benjamin Jädon Chöe [In Japanese Kanji: 崔 在敦]</span>
+							<span class="orangeText">Benjamin Jaedon Choi [In Japanese Kanji: 崔 在敦]</span>
 							<br><br>
-							<span class="grayText">Particle Theory Group<br>Graduate School of Pure and Applied Physics, University of Tsukuba</span>
+							<span class="grayText">Lattice Gauge Theory Research Center<br>Department of Physics and Astronomy<br>Seoul National University</span>
 							<br><br>
 							<span class="orange">Gemischter Chor der Universität Tsukuba</span>
 							<br><br>
-							〒305-8571 茨城県つくば市天王台1-1-1<br>筑波大学物理学系素粒子理論研究室
+							〒08826 ソウル特別市冠岳区冠岳路１<br>ソウル大学物理天文学部56棟528号室
 							<br><br>
-							<span class="grayText">自然系学系D棟307号室</span>
+							<span class="grayText">格子ゲージ理論研究団</span>
 							<br><br>
-							Tel: <span class="orangeText">+81-29-853-6931</span>
+							Tel: <span class="orangeText">+82-2-880-6145</span>
 							<br>
-							E-Mail: <span class="orangeText">donchoi</span>アットマーク<span class="orangeText">het.ph.tsukuba.ac.jp</span>
+							E-Mail: <span class="orangeText">benjaminchoi</span>アットマーク<span class="orangeText">snu.ac.kr</span>
 							<br>
-							Blog: <a target="_blank" href="http://posteinstein.com">http://PostEinstein.com</a></td>
+<!-- 							<!-- Blog: <a target="_blank" href="http://posteinstein.com">http://PostEinstein.com</a></td> -->
 							<td width="525"> 
-							<div align="right"><img height="300" name="Benjamin Cantabile" src="images/PortraitBen.jpg" title="Benjamin Cantabile" width="252.2"></div>
+<!-- 							<!-- <div align="right"><img height="300" name="Benjamin Cantabile" src="images/PortraitBen.jpg" title="Benjamin Cantabile" width="252.2"></div> -->
 							</td>
 							</tr>
 							</table>
@@ -83,7 +83,7 @@
 					<td width="400" height="262">
 					<table border="2" height="262" width="400" id="table5" cellspacing="0" cellpadding="0" bordercolor="#444444" style="line-height: 150%">
 						<tr>
-							<td><script src="http://widgets.twimg.com/j/2/widget.js"></script>
+							<td><!--<script src="http://widgets.twimg.com/j/2/widget.js"></script>-->
 <script>
 new TWTR.Widget({
   version: 2,
@@ -124,7 +124,7 @@ new TWTR.Widget({
 					<td width="575" height="262">
 					<table border="2" height="262" width="575" id="table6" cellspacing="0" cellpadding="0" bordercolor="#EB9500" style="line-height: 150%">
 						<tr>
-							<td><script src="http://widgets.twimg.com/j/2/widget.js"></script>
+							<td><!--<script src="http://widgets.twimg.com/j/2/widget.js"></script>-->
 <script>
 new TWTR.Widget({
   version: 2,
@@ -188,7 +188,7 @@ new TWTR.Widget({
 					<td width="550" height="250">
 					<table border="2" width="100%" id="table10" cellspacing="0" cellpadding="0" bordercolor="#444444" height="100%">
 						<tr>
-							<td><script src="http://widgets.twimg.com/j/2/widget.js"></script>
+							<td><!--<script src="http://widgets.twimg.com/j/2/widget.js"></script>-->
 <script>
 new TWTR.Widget({
   version: 2,
