--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 							<br>
 							E-Mail: <span class="orangeText">benjaminchoi</span>アットマーク<span class="orangeText">snu.ac.kr</span>
 							<br>
-<!-- 							<!-- Blog: <a target="_blank" href="http://posteinstein.com">http://PostEinstein.com</a></td> -->
+ 							Blog: <a target="_blank" href="https://saintbenjamin.wordpress.com">http://saintbenjamin.wordpress.com</a></td>
 							<td width="525"> 
-<!-- 							<!-- <div align="right"><img height="300" name="Benjamin Cantabile" src="images/PortraitBen.jpg" title="Benjamin Cantabile" width="252.2"></div> -->
+<!-- 							<div align="right"><img height="300" name="Benjamin Cantabile" src="images/PortraitBen.jpg" title="Benjamin Cantabile" width="252.2"></div> -->
 							</td>
 							</tr>
 							</table>
@@ -58,7 +58,7 @@
 					</td>
 				</tr>
 			</table>
-			<table border="0" width="1000" id="table2" height="300" cellspacing="0" cellpadding="0">
+<!-- 			<table border="0" width="1000" id="table2" height="300" cellspacing="0" cellpadding="0">
 				<tr>
 				<td height="25"></td><td height="25"></td><td height="25"></td>
 				</tr>
@@ -160,7 +160,7 @@ new TWTR.Widget({
 					</table>
 					</td>
 				</tr>
-			</table>
+			</table> -->
 			<table border="0" width="1000" id="table7" height="250" cellspacing="0" cellpadding="0">
 				<tr>
 					<td width="550" height="25"></td>
