--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div align="center">
 	<table border="0" width="1000" id="table1" cellspacing="0" cellpadding="0">
 		<tr>
-			<td height="150"><div align="center"><img border="0" name="The webpage of Benjamin Jädon Chöe :: Lattice Gauge Theory Research Center of Seoul National University" src="images/benjamin_title.png" title="The webpage of Benjamin Jädon Chöe :: Lattice Gauge Theory Research Center of Seoul National University" width="1000" height="150"></div></td>
+			<td height="150"><div align="center"><img border="0" name="The webpage of Benjamin Jädon Chöe :: Lattice Gauge Theory Research Center of Seoul National University" src="images/benjamin_title.jpg" title="The webpage of Benjamin Jädon Chöe :: Lattice Gauge Theory Research Center of Seoul National University" width="1000" height="150"></div></td>
 		</tr>
 		<tr>
 			<td height="25"><div align="right">Dies ist die Homepage von Benjamin Jaedon Choi@SNU-LGTRC</div></td>
