--- a/rss.html
+++ b/rss.html
@@ -22,26 +22,26 @@
  		<a target="_blank" title="コリオリー力の例題" href="data/pdf/coriolis.pdf"><span class="orangeText">コリオリー力の例題</span></a><br>
 		<a target="_blank" title="Z_0 Boson及びJ/ψ Mesonの質量測定とμ 粒子の寿命測定" href="data/pdf/report.pdf">Z_0 Boson及びJ/ψ Mesonの質量測定とμ 粒子の寿命測定</a><br>
 		<a target="_blank" title="Approach to Angular Momentum through Quantum Mechanics Consideration" href="data/angmom3.pdf">Approach to Ang. Mom. through QM Consideration</a><br>
-		<a target="_blank" title="ベクトル解析の公式等" href="data/pdf/vector analysis.pdf">ベクトル解析の公式等</a><br>
-		<a target="_blank" title="テイラー級数展開" href="data/pdf/taylor.pdf">テイラー級数展開</a><br>
-		<a target="_blank" title="いくつかの類型の微分方程式" href="data/pdf/differential.pdf">いくつかの類型の微分方程式</a><br>
-		<a target="_blank" title="ガンマー関数とベータ関数" href="data/pdf/gamma beta.pdf">ガンマー関数とベータ関数</a><br>
-		<a target="_blank" title="積分表－定積分" href="data/pdf/definite integrals.pdf">積分表－定積分</a><br>
-		<a target="_blank" title="積分表－不定積分" href="data/pdf/indefinite integrals.pdf"><span class="orangeText">積分表－不定積分</span></a><br>
-		<a target="_blank" title="微分表" href="data/pdf/derivative.pdf">微分表</a><br>
-		<a target="_blank" title="興味深い空間解析幾何図形等" href="data/pdf/solid analytic geometry.pdf">興味深い空間解析幾何図形等</a><br>
-		<a target="_blank" title="特異な平面曲線等" href="data/pdf/special plane curves.pdf">特異な平面曲線等</a><br>
-		<a target="_blank" title="双曲線三角関数の公式等" href="data/pdf/hyperbolic functions.pdf">双曲線三角関数の公式等</a><br>
-		<a target="_blank" title="三角関数に関する公式等" href="data/pdf/trigonometric functions.pdf">三角関数に関する公式等</a><br>
-		<a target="_blank" title="面白い幾何学公式等" href="data/pdf/geometric fomulas.pdf">面白い幾何学公式等</a><br>
-		<a target="_blank" title="POSTECH 2003年度前期期末テスト過去問" href="data/pdf/2003_1_cal_final.pdf">POSTECH 2003年度前期期末テスト過去問</a><br>
-		<a target="_blank" title="CRC Handbook :: 三角関数" href="data/pdf/CRC sannkaku.pdf">CRC Handbook :: 三角関数</a><br>
-		<a target="_blank" title="CRC Handbook :: 微分方程式" href="data/pdf/CRC DF.pdf">CRC Handbook :: 微分方程式</a><br>
-		<a target="_blank" title="CRC Handbook :: ベクトル解析" href="data/pdf/CRC Vector Analysis.pdf">CRC Handbook :: ベクトル解析</a><br>
-		<a target="_blank" title="CRC Handbook :: ベータ関数" href="data/pdf/CRC Beta.pdf">CRC Handbook :: ベータ関数</a><br>
-		<a target="_blank" title="CRC Handbook :: ガンマー関数" href="data/pdf/CRC Gamma.pdf">CRC Handbook :: ガンマー関数</a><br>
-		<a target="_blank" title="CRC Handbook :: 積分表" href="data/pdf/CRC Integrals.pdf">CRC Handbook :: 積分表</a><br>
-		<a target="_blank" title="CRC Handbook :: 微分表" href="data/pdf/CRC Derivatives.pdf">CRC Handbook :: 微分表</a><br>
+<!-- 		<a target="_blank" title="ベクトル解析の公式等" href="data/pdf/vector analysis.pdf">ベクトル解析の公式等</a><br> -->
+<!-- 		<a target="_blank" title="テイラー級数展開" href="data/pdf/taylor.pdf">テイラー級数展開</a><br> -->
+<!-- 		<a target="_blank" title="いくつかの類型の微分方程式" href="data/pdf/differential.pdf">いくつかの類型の微分方程式</a><br> -->
+<!-- 		<a target="_blank" title="ガンマー関数とベータ関数" href="data/pdf/gamma beta.pdf">ガンマー関数とベータ関数</a><br> -->
+<!-- 		<a target="_blank" title="積分表－定積分" href="data/pdf/definite integrals.pdf">積分表－定積分</a><br> -->
+<!-- 		<a target="_blank" title="積分表－不定積分" href="data/pdf/indefinite integrals.pdf"><span class="orangeText">積分表－不定積分</span></a><br> -->
+<!-- 		<a target="_blank" title="微分表" href="data/pdf/derivative.pdf">微分表</a><br> -->
+<!-- 		<a target="_blank" title="興味深い空間解析幾何図形等" href="data/pdf/solid analytic geometry.pdf">興味深い空間解析幾何図形等</a><br> -->
+<!-- 		<a target="_blank" title="特異な平面曲線等" href="data/pdf/special plane curves.pdf">特異な平面曲線等</a><br> -->
+<!-- 		<a target="_blank" title="双曲線三角関数の公式等" href="data/pdf/hyperbolic functions.pdf">双曲線三角関数の公式等</a><br> -->
+<!-- 		<a target="_blank" title="三角関数に関する公式等" href="data/pdf/trigonometric functions.pdf">三角関数に関する公式等</a><br> -->
+<!-- 		<a target="_blank" title="面白い幾何学公式等" href="data/pdf/geometric fomulas.pdf">面白い幾何学公式等</a><br> -->
+<!-- 		<a target="_blank" title="POSTECH 2003年度前期期末テスト過去問" href="data/pdf/2003_1_cal_final.pdf">POSTECH 2003年度前期期末テスト過去問</a><br> -->
+<!-- 		<a target="_blank" title="CRC Handbook :: 三角関数" href="data/pdf/CRC sannkaku.pdf">CRC Handbook :: 三角関数</a><br> -->
+<!-- 		<a target="_blank" title="CRC Handbook :: 微分方程式" href="data/pdf/CRC DF.pdf">CRC Handbook :: 微分方程式</a><br> -->
+<!-- 		<a target="_blank" title="CRC Handbook :: ベクトル解析" href="data/pdf/CRC Vector Analysis.pdf">CRC Handbook :: ベクトル解析</a><br> -->
+<!-- 		<a target="_blank" title="CRC Handbook :: ベータ関数" href="data/pdf/CRC Beta.pdf">CRC Handbook :: ベータ関数</a><br> -->
+<!-- 		<a target="_blank" title="CRC Handbook :: ガンマー関数" href="data/pdf/CRC Gamma.pdf">CRC Handbook :: ガンマー関数</a><br> -->
+<!-- 		<a target="_blank" title="CRC Handbook :: 積分表" href="data/pdf/CRC Integrals.pdf">CRC Handbook :: 積分表</a><br> -->
+<!-- 		<a target="_blank" title="CRC Handbook :: 微分表" href="data/pdf/CRC Derivatives.pdf">CRC Handbook :: 微分表</a><br> -->
 		<a target="_blank" title="On the Electrodynamics of moving bodys" href="data/pdf/einstein_eng.pdf">On the Electrodynamics of moving bodys</a><br>
 		<a target="_blank" title="Zur Electrodynamik bewegter Körper; von A. Einstein" href="data/pdf/einstein_ger.pdf"><span class="orangeText">Zur Electrodynamik bewegter Körper; von A. Einstein</span></a><br>
 		<!--<li><a target="_blank" title="Zur Electrodynamik bewegter Körper; von A. Einstein" href="data/pdf/einstein_ger.pdf"><span class="orangeText">Zur Electrodynamik bewegter Körper; von A. Einstein</span></a></li>-->
