--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<td width="550" height="25">
 					<table border="0" width="100%" id="table8" cellspacing="0" cellpadding="5">
 						<tr>
-							<td><span class="orangeText">Verified Twitter Users</span></td>
+							<td><span class="orangeText">Backup space</span></td>
 						</tr>
 					</table>
 					</td>
@@ -76,48 +76,16 @@
 					<td width="425" height="25">
 					<table border="0" width="100%" id="table9" cellspacing="0" cellpadding="5">
 						<tr>
-							<td><span class="orangeText">PostEinstein.comによるRSS Feed & 資料倉庫</span></td>
+							<td><span class="orangeText">資料倉庫</span></td>
 						</tr>
 					</table>
 					</td>
 				</tr>
 				<tr>
-					<td width="550" height="250">
+					<td width="550" height="399">
 					<table border="2" width="100%" id="table10" cellspacing="0" cellpadding="0" bordercolor="#444444" height="100%">
 						<tr>
-							<td><!--<script src="http://widgets.twimg.com/j/2/widget.js"></script>-->
-<script>
-new TWTR.Widget({
-  version: 2,
-  type: 'list',
-  rpp: 20,
-  interval: 6000,
-  title: '@BenjaminJChoi',
-  subject: 'Verified Twitterians',
-  width: 541,
-  height: 300,
-  theme: {
-    shell: {
-      background: '#ffffff',
-      color: '#444444'
-    },
-    tweets: {
-      background: '#ffffff',
-      color: '#444444',
-      links: '#eb9500'
-    }
-  },
-  features: {
-    scrollbar: true,
-    loop: false,
-    live: true,
-    hashtags: true,
-    timestamp: true,
-    avatars: true,
-    behavior: 'all'
-  }
-}).render().setList('BenjaminJChoi', 'verified').start();
-</script><!--<IFRAME WIDTH="100%" HEIGHT="100%" FRAMEBORDER="no" SCROLLING="auto" SRC="03.html" MARGINWIDTH="0" MARGINHEIGHT="0" NAME="bbs" HSPACE="0" VSPACE="0" border="0"></IFRAME>-->
+							<td>
 							</td>
 						</tr>
 					</table>
