--- a/rss.html
+++ b/rss.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="ja">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>PostEinstein.com</title>
+<title>Data list</title>
 <link type="text/css" rel="stylesheet" href="demian.css">
 <style>a {text-decoration:none}</style>
 </head>
@@ -13,11 +13,6 @@
 <table id="seminar" border="0" width="405" cellspacing="0" cellpadding="10" height="490">
 	<tr>
 		<td width="405" height="490">
-			<script language="JavaScript" src="http://convert.rss-to-javascript.com/?src=http://posteinstein.com/feed/&desc=0&desc_max=0&chan=0&simple_chan=0&font=&fgcolor=&bgcolor=&date=0&target=&num=0&target=&use_lists=0&font_size=" ></script>
-			<!--<script language="JavaScript" src="http://convert.rss-to-javascript.com/?src=http://posteinstein.com/feed/&desc=0&desc_max=0&chan=0&simple_chan=0&font=&fgcolor=EB9500&bgcolor=&date=0&target=&num=0&target=&use_lists=0&font_size=" ></script>-->
-				<!--<noscript>Your browser does not support JavaScript. <a title='RSS-to-JavaScript.com: Free RSS to JavaScript Converter' href=http://convert.rss-to-javascript.com/?src=http://posteinstein.com/feed/&desc=0&desc_max=0&chan=0&simple_chan=0&font=&fgcolor=&bgcolor=&date=0&target=&num=0&target=&use_lists=0&font_size=&as_html=1 >Click to read the latest news</a>.</noscript>-->
-			<!--<a href=http://www.rss-to-javascript.com target=_blank title='RSS-to-JavaScript.com: Free RSS to JavaScript Converter'><img src=http://www.rss-to-javascript.com/images/rss-to-jss-small.gif alt='RSS to JavaScript' border=0></a>-->
-<!-- 		<br>		 -->
 		<a target="_blank" title="原子核実験 :: α、β、γ 線の測定" href="data/pdf/nuclear.pdf">原子核実験 :: α、β、γ 線の測定</a><br>
  		<a target="_blank" title="コリオリー力の例題" href="data/pdf/coriolis.pdf"><span class="orangeText">コリオリー力の例題</span></a><br>
 		<a target="_blank" title="Z_0 Boson及びJ/ψ Mesonの質量測定とμ 粒子の寿命測定" href="data/pdf/report.pdf">Z_0 Boson及びJ/ψ Mesonの質量測定とμ 粒子の寿命測定</a><br>
@@ -48,14 +43,5 @@
 		</td>
 	</tr>
 </table>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-13040817-2");
-pageTracker._trackPageview();
-} catch(err) {}</script>
 </body>
 </html>
