--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		</tr>
 		<tr>
 			<td height="25">
-			<div align="right">Copyright 2012 Benjamin Jädon Chöe All rights reserved // Last modified: Mon Mar 05 00:51:09 JST 2012 //</div>
+			<div align="right">Copyright 2022 Benjamin Jaedon Choi All rights reserved // Last modified: 16:53:00 JST Wed 13 Jul 2022 //</div>
 			</td>
 		</tr>
 	</table>
