--- a/rss.html
+++ b/rss.html
@@ -8,8 +8,11 @@
 <style>a {text-decoration:none}</style>
 </head>
 
-<body topmargin="0" leftmargin="0" bottommargin="0" style="overflow-x:hidden" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+<!-- <body topmargin="0" leftmargin="0" bottommargin="0" style="overflow-x:hidden" oncontextmenu="return false" onselectstart="return false" ondragstart="return false"> -->
+<body topmargin="0" leftmargin="0" bottommargin="0" style="overflow-x:hidden" oncontextmenu="return false" onselectstart="return false" ondragstart="return false" bgcolor=”#800000">
 
+
+	
 <table id="seminar" border="0" width="405" cellspacing="0" cellpadding="10" height="490">
 	<tr>
 		<td width="405" height="490">
