--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 							<span class="orangeText">Benjamin Jaedon Choi [In Japanese Kanji: 崔 在敦]</span>
 							<br><br>
 							<span class="grayText">Lattice Gauge Theory Research Center<br>Department of Physics and Astronomy<br>Seoul National University</span>
-							<br><br>
-							<span class="orange">Gemischter Chor der Universität Tsukuba</span>
-							<br><br>
+<!--  							<br><br> -->
+<!-- 							<span class="orange">Gemischter Chor der Universität Tsukuba</span> -->
+<!-- 							<br><br> -->
 							〒08826 ソウル特別市冠岳区冠岳路１<br>ソウル大学物理天文学部56棟528号室
 							<br><br>
 							<span class="grayText">格子ゲージ理論研究団</span>
