--- a/rss.html
+++ b/rss.html
@@ -9,7 +9,7 @@
 </head>
 
 <!-- <body topmargin="0" leftmargin="0" bottommargin="0" style="overflow-x:hidden" oncontextmenu="return false" onselectstart="return false" ondragstart="return false"> -->
-<body topmargin="0" leftmargin="0" bottommargin="0" style="overflow-x:hidden" oncontextmenu="return false" onselectstart="return false" ondragstart="return false" bgcolor=”#800000">
+<body topmargin="0" leftmargin="0" bottommargin="0" style="overflow-x:hidden" oncontextmenu="return false" onselectstart="return false" ondragstart="return false"  style="background-color: gray;">
 
 
 	
