--- a/rss.html
+++ b/rss.html
@@ -13,8 +13,9 @@
 
 
 	
+<!-- <table id="seminar" border="0" width="405" cellspacing="0" cellpadding="10" height="490" style="background-color:#FFFFE0;"> -->
 <table id="seminar" border="0" width="405" cellspacing="0" cellpadding="10" height="490" style="background-color:#FFFFE0;">
-	<tr>
+	<tr style="vertical-align:top">
 		<td width="405" height="490">
 		<a target="_blank" title="原子核実験 :: α、β、γ 線の測定" href="data/pdf/nuclear.pdf">原子核実験 :: α、β、γ 線の測定</a><br>
  		<a target="_blank" title="コリオリー力の例題" href="data/pdf/coriolis.pdf"><span class="orangeText">コリオリー力の例題</span></a><br>
