--- a/rss.html
+++ b/rss.html
@@ -20,7 +20,7 @@
 		<a target="_blank" title="原子核実験 :: α、β、γ 線の測定" href="data/pdf/nuclear.pdf">原子核実験 :: α、β、γ 線の測定</a><br>
  		<a target="_blank" title="コリオリー力の例題" href="data/pdf/coriolis.pdf"><span class="orangeText">コリオリー力の例題</span></a><br>
 		<a target="_blank" title="Z_0 Boson及びJ/ψ Mesonの質量測定とμ 粒子の寿命測定" href="data/pdf/report.pdf">Z_0 Boson及びJ/ψ Mesonの質量測定とμ 粒子の寿命測定</a><br>
-		<a target="_blank" title="Approach to Angular Momentum through Quantum Mechanics Consideration" href="data/angmom3.pdf">Approach to Ang. Mom. through QM Consideration</a><br>
+		<a target="_blank" title="Approach to Angular Momentum through Quantum Mechanics Consideration" href="data/pdf/angmom3.pdf">Approach to Ang. Mom. through QM Consideration</a><br>
 		<a target="_blank" title="On the Electrodynamics of moving bodys" href="data/pdf/einstein_eng.pdf">On the Electrodynamics of moving bodys</a><br>
 		<a target="_blank" title="Zur Electrodynamik bewegter Körper; von A. Einstein" href="data/pdf/einstein_ger.pdf"><span class="orangeText">Zur Electrodynamik bewegter Körper; von A. Einstein</span></a><br>
 		</td>
