--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<td width="550" height="399">
 					<table border="2" width="100%" id="table10" cellspacing="0" cellpadding="0" bordercolor="#444444" height="100%">
 						<tr>
-							<td>
+							<td><IFRAME WIDTH="100%" HEIGHT="100%" FRAMEBORDER="no" SCROLLING="auto" SRC="rss_left.html" MARGINWIDTH="0" MARGINHEIGHT="0" NAME="bbs" HSPACE="0" VSPACE="0" border="0"></IFRAME>
 							</td>
 						</tr>
 					</table>
