--- a/rss_left.html
+++ b/rss_left.html
@@ -9,13 +9,19 @@
 </head>
 
 <body topmargin="0" leftmargin="0" bottommargin="0" style="overflow-x:hidden" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
-
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        tex2jax: { inlineMath: [['$$', '$$']], displayMath: [['$$$', '$$$']] }
+    });
+</script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 
 	
 <table id="seminar" border="0" width="550" cellspacing="0" cellpadding="10" height="490">
 	<tr style="vertical-align:top">
 		<td width="550" height="490">
-      Hello world for backup space
+      		$$$ E=mc^2 $$$
 <!-- 		<a target="_blank" title="原子核実験 :: α、β、γ 線の測定" href="data/pdf/nuclear.pdf">原子核実験 :: α、β、γ 線の測定</a><br> -->
 		</td>
 	</tr>
