--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         </header>
         <main>
             <div class="menus" id="jesus">
-                <br><br>
                 <h3 class="outlined-text-semibig">
                     The Word of Heavenly Father
                 </h3>
@@ -60,11 +59,9 @@
                     <br>
                     私は、私を強くしてくださる方によって、どんなことでもできるのです。(ピリピ人への手紙4:13、新改訳)
                 </p>
-                <br><br>
             </div> 
             <!-- <hr /> -->
             <div class="menus" id="bio">
-                <br><br>
                 <h1 class="outlined-text-superbig">Benjamin Jaedon Choi (崔 在敦)</h1>
                 <ul class="outlined-text">
                     <li>
@@ -188,11 +185,9 @@
                         </ul>
                     </li>
                 </ul>
-                <br><br>
             </div>
             <!-- <hr /> -->
             <div class="menus" id="edu">
-                <br><br>
                 <h3 class="outlined-text-big">Education</h3>
                 <ul class="outlined-text">
                     <li>
@@ -252,11 +247,9 @@
                         </ul>
                     </li>
                 </ul>
-                <br><br>
             </div>
             <!-- <hr /> -->
             <div class="menus" id="academic">
-                <br><br>
                 <h3 class="outlined-text-big">Academic and Other Experience</h3>
                 <ul class="outlined-text">
                     <li>
@@ -294,12 +287,10 @@
                         </ul>
                     </li>
                 </ul>
-                <br><br>
             </div>
             <!-- <hr /> -->
             <div class="menus" id="honor">
-                <br><br>
-                <h3 class="outlined-big">Honors</h3>
+                <h3 class="outlined-text-big">Honors</h3>
                 <ul class="outlined-text">
                     <li>
                         Academic Next Generation Fellowship
@@ -358,11 +349,9 @@
                         </ul>
                     </li>
                 </ul>
-                <br><br>
             </div>
             <!-- <hr /> -->
             <div class="menus" id="publication">
-                <br><br>
                 <h3 class="outlined-text-big">Publications</h3>
                 <iframe src="./wrapper.xml" scrolling="yes" onload="resizeIframe(this)" ></iframe>
                 <!-- <iframe src="test.xml"></iframe> -->
@@ -431,7 +420,6 @@
                         </ul>
                     </li>
                 </ol>
-                <br><br>
             </div>
             <!-- <hr /> -->
             <!-- <div class="menus" id="res">
@@ -442,7 +430,6 @@
             </div>
             <hr /> -->
             <div class="menus" id="links">
-                <br><br>
                 <h3 class="outlined-text-big">External Links</h3>
                 <ul class="outlined-text">
                     <li>
@@ -467,7 +454,7 @@
                         <a href="https://sites.google.com/site/postdocrumor/" target="_blank">HEP Theory Postdoc Rumor Mill</a>
                     </li>
                 </ul>
-                <br><br>
+                <br>
             </div>
             <!-- <hr />
             <div style="text-align: center">
