--- a/juhee/index.html
+++ b/juhee/index.html
@@ -316,7 +316,7 @@
     <br><br><br><br><br>
   </main>
   <footer>
-    <p class="outlined-text">&copy; 2024 Sop. Juhee Choi. All rights reserved.</p>
+    <p class="outlined-text">&copy; 2024 Juhee Choi. All rights reserved.</p>
 
     <div class="icon-container">
       <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank">
