--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Benjamin J. Choi</title>
-        <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap"  rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
         <script>
-        MathJax = {
-            tex: {
-                inlineMath: [['$', '$']], // Define $...$ for inline math
-                displayMath: [['$$', '$$']] // $$...$$ for block math
-            }
-        };
+            MathJax = {
+                tex: {
+                    inlineMath: [['$', '$']], // Define $...$ for inline math
+                    displayMath: [['$$', '$$']] // $$...$$ for block math
+                }
+            };
         </script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script>
@@ -21,7 +18,11 @@
                 obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
             }
         </script>
-      <link rel="stylesheet" href="main.css">
+        <link href="https://fonts.googleapis.com/css2?family=CMU+Serif&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <div class="background"></div>
@@ -40,7 +41,7 @@
                 <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
                 <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
                 <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
-                <!-- <li class="outlined-text-semibig"><a href="#res">Research Statements</a></li>-->
+                <!-- <li class="outlined-text-semibig"><a href="#res">Research Statements</a></li> -->
                 <li class="outlined-text-semibig"><a href="#links">Links</a></li>
             </ul>
         </header>
@@ -421,14 +422,12 @@
                     </li>
                 </ol>
             </div>
-            <!-- <hr /> -->
             <!-- <div class="menus" id="res">
                 <br><br>
                 <h3>Research Statement</h3>
                 <iframe src="./res_sta.html" scrolling="yes" onload="resizeIframe(this)" ></iframe>
                 <br><br>
-            </div>
-            <hr /> -->
+            </div> -->
             <div class="menus" id="links">
                 <h3 class="outlined-text-big">External Links</h3>
                 <ul class="outlined-text">
