--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                 <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
                 <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
                 <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
-                <!-- <li class="outlined-text-semibig"><a href="#res">Research Statements</a></li> -->
                 <li class="outlined-text-semibig"><a href="#links">Links</a></li>
             </ul>
         </header>
@@ -197,76 +196,43 @@
             <div class="menus" id="publication">
                 <h3 class="outlined-text-big">Publications</h3>
                 <iframe src="./wrapper.xml" scrolling="yes" onload="resizeIframe(this)" ></iframe>
-                <ol class="outlined-text" start="9">
-                    <!-- <li>
-                        <em>PoS</em> <strong>LATTICE2024</strong> 033 [<a href="https://arxiv.org/abs/2411.18170">arXiv</a>]
-                        <ul>
-                            <li>Machine Learning Estimation on the Trace of Inverse Dirac Operator using the Gradient Boosting Decision Tree Regression</li>
-                            <li><strong>Benjamin J. Choi</strong>, Hiroshi Ohno, Takayuki Sumimoto and Akio Tomiya</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://doi.org/10.22323/1.453.0245"><em>PoS</em> <strong>LATTICE2023</strong> 245</a> [<a href="https://arxiv.org/abs/2401.01561">arXiv</a>]
-                        <ul>
-                            <li>Current progress on the semileptonic form factors for \(B \to D^{(\ast)} \ell \nu\) decay using the Oktay-Kronfeld action</li>
-                            <li>Tanmoy Bhattacharya, <strong>Benjamin J. Choi</strong>, Rajan Gupta, Yong-Chull Jang, Seungyeob Jwa, Sunghee Kim, Sunkyu Lee, Weonjong Lee, Jaehoon Leem, Jeonghwan Pak and Sungwoo Park on behalf of LANL/SWME Collaboration</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://doi.org/10.22323/1.453.0155"><em>PoS</em> <strong>LATTICE2023</strong> 155</a> [<a href="https://arxiv.org/abs/arXiv:2401.01584">arXiv</a>]
-                        <ul>
-                            <li>Progress report on testing robustness of the Newton method in data analysis on 2-point correlation function using a MILC HISQ ensemble</li>
-                            <li>Tanmoy Bhattacharya, <strong>Benjamin J. Choi</strong>, Rajan Gupta, Yong-Chull Jang, Seungyeob Jwa, Sunghee Kim, Sunkyu Lee, Weonjong Lee, Jaehoon Leem, Jeonghwan Pak and Sungwoo Park on behalf of LANL/SWME Collaboration</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://doi.org/10.22323/1.396.0136"><em>PoS</em> <strong>LATTICE2021</strong> 136</a> [<a href="https://arxiv.org/abs/2204.05848">arXiv</a>]
-                        <ul>
-                            <li>Improved data analysis on two-point correlation function with sequential Bayesian method</li>
-                            <li>Tanmoy Bhattacharya, <strong>Benjamin J. Choi</strong>, Rajan Gupta, Yong-Chull Jang, Seungyeob Jwa, Sunkyu Lee, Weonjong Lee, Jaehoon Leem, Sungwoo Park and Boram Yoon on behalf of LANL/SWME Collaboration</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://doi.org/10.22323/1.363.0056"><em>PoS</em> <strong>LATTICE2019</strong> 56</a> [<a href="https://arxiv.org/abs/2003.09206">arXiv</a>]
-                        <ul>
-                            <li>Semileptonic \(B \to D^{(\ast)} \ell \nu\) Decay Form Factors using the Oktay-Kronfeld Action</li>
-                            <li>Tanmoy Bhattacharya, <strong>Benjamin J. Choi</strong>, Rajan Gupta, Yong-Chull Jang, Seungyeob Jwa, Sunkyu Lee, Weonjong Lee, Jaehoon Leem and Sungwoo Park on behalf of LANL/SWME Collaboration</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://doi.org/10.22323/1.363.0050"><em>PoS</em> <strong>LATTICE2019</strong> 50</a> [<a href="https://arxiv.org/abs/2002.04755">arXiv</a>]
-                        <ul>
-                            <li>Leptonic decays of \(B_{(s)}\) and \(D_{(s)}\) using the OK action</li>
-                            <li>Tanmoy Bhattacharya, <strong>Benjamin J. Choi</strong>, Rajan Gupta, Yong-Chull Jang, Seungyeob Jwa, Sunkyu Lee, Weonjong Lee, Jaehoon Leem and Sungwoo Park on behalf of LANL/SWME Collaboration</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://doi.org/10.22323/1.334.0295"><em>PoS</em> <strong>LATTICE2018</strong> 295</a> [<a href="https://arxiv.org/abs/1810.13149">arXiv</a>]
-                        <ul>
-                            <li>Perturbative calculation of \(Z_q\) at the one-loop level using HYP-smeared staggered quarks</li>
-                            <li><strong>Benjamin J. Choi</strong>, Jangho Kim, Weonjong Lee, Sungwoo Park and Stephen R. Sharpe on behalf of SWME Collaboration</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://doi.org/10.22323/1.334.0283"><em>PoS</em> <strong>LATTICE2018</strong> 283</a> [<a href="https://arxiv.org/abs/1812.07675">arXiv</a>]
-                        <ul>
-                            <li>Update on \(B \to D^\ast \ell \nu\) form factor at zero-recoil using the Oktay-Kronfeld action</li>
-                            <li>Jon A. Bailey, Tanmoy Bhattacharya, <strong>Benjamin J. Choi</strong>, Rajan Gupta, Yong-Chull Jang, Hwancheol Jeong, Seungyeob Jwa, Sunkyu Lee, Weonjong Lee, Jaehoon Leem, Jeonghwan Pak and Sungwoo Park on behalf of LANL/SWME Collaboration</li>
-                        </ul>
-                    </li>  -->
-                    <li><a href="https://doi.org/10.1103/PhysRevD.93.014511"><em>Phys. Rev.</em> <strong>D93</strong> 014511</a> [<a href="https://arxiv.org/abs/1509.00592">arXiv</a>]</li>
+                <ol class="outlined-text" start="9">                    
+                    <li><a href="https://arxiv.org/abs/1509.00592" target="_blank"><b>Kaon BSM $B$-parameters using improved staggered fermions from $N_f=2+1$ unquenched QCD</b></a></li>
                     <ul>
-                        <li>Kaon BSM $B$-parameters using improved staggered fermions from $N_f=2+1$ unquenched QCD</li>
+                        <li>2015-12-22</li>
                         <li><strong>Benjamin J. Choi</strong>, Yong-Chull Jang, Chulwoo Jung, Hwancheol Jeong, Jangho Kim, Jongjeong Kim, Sunghee Kim, Weonjong Lee, Jaehoon Leem, Jeonghwan Pak, Sungwoo Park, Stephen R. Sharpe and Boram Yoon on behalf of SWME Collaboration</li>
+                        <li>
+                            We present results for the matrix elements of the additional $\Delta S=2$
+                            operators that appear in models of physics beyond the Standard Model (BSM),
+                            expressed in terms of four BSM $B$-parameters.
+                            Combined with experimental results for $\Delta M_K$ and $\epsilon_K$,
+                            these constrain the parameters of BSM models.
+                            We use improved staggered fermions, with valence HYP-smeared quarks and
+                            $N_f=2+1$ flavors of ``asqtad" sea quarks. The configurations have been generated
+                            by the MILC collaboration.
+                            The matching between lattice and continuum four-fermion operators and bilinears
+                            is done perturbatively at one-loop order.
+                            We use three lattice spacings for the continuum extrapolation: $a\approx 0.09$, $0.06$ and
+                            $0.045\;$fm. Valence light-quark masses range down to $\approx m_s^{\rm phys}/13$
+                            while the light sea-quark masses range down to $\approx m_s^{\rm phys}/20$.
+                            Compared to our previous published work, we have added four additional lattice
+                            ensembles, leading to better controlled extrapolations in the lattice spacing and
+                            sea-quark masses.
+                            We report final results for two renormalization scales, $\mu=2\;\text{GeV}$ and $3\;\text{GeV}$,
+                            and compare them to those obtained by other collaborations.
+                            Agreement is found for two of the four BSM $B$-parameters ($B_2$ and $B_3^\text{SUSY}$).
+                            The other two ($B_4$ and $B_5$) differ significantly
+                            from those obtained using RI-MOM renormalization as an intermediate scheme,
+                            but are in agreement with recent preliminary results obtained by
+                            the RBC-UKQCD collaboration using RI-SMOM intermediate schemes.
+                        </li>
+                        <li>17 pages, 24 figures, 13 tables, and updated</li>
+                        <li><strong>Phys. Rev. D 93, 014511 (2016)</strong></li>
+                        <li><a href="https://arxiv.org/abs/1509.00592 target="_blank"">https://arxiv.org/abs/1509.00592</a></li>
+                        <li><a href="https://doi.org/10.1103/PhysRevD.93.014511" target="_blank">https://doi.org/10.1103/PhysRevD.93.014511</li>
                     </ul>
                 </ol>
             </div>
-            <!-- <div class="menus" id="res">
-                <br><br>
-                <h3>Research Statement</h3>
-                <iframe src="./res_sta.html" scrolling="yes" onload="resizeIframe(this)" ></iframe>
-                <br><br>
-            </div> -->
             <div class="menus" id="links">
                 <h3 class="outlined-text-big">External Links</h3>
                 <ul class="outlined-text">
@@ -281,14 +247,6 @@
                 </ul>
                 <br><br><br><br><br>
             </div>
-            <!-- <hr />
-            <div style="text-align: center">
-                <br><br>
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/GkQG5cQHB_I?si=u5rAWzIz0NcqfEwt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <br><br>
-                <img src="img/YUN_6275.JPG" alt="At the day of wedding ceremony" width="600" height="400" />
-                <br><br>
-            </div> -->
         </main>
         <footer>
             <p class="outlined-text">&copy; 2024 Benjamin J. Choi. All rights reserved.</p>
@@ -302,7 +260,6 @@
               <a href="https://www.facebook.com/benjamin.dion.choi" target="_blank">
                 <i class="fab fa-facebook-square"></i>
               </a>
-              <!-- <i class="fab fa-twitter-square"></i> -->
             </div>  
           </footer>
           <script>
